wrap FontUpgrade and fix variables

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,5 @@
 .root {
   text-align: center;
-  font-family: "Madefor";
 }
 
 body {
